-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
In mdd_changelog_llog_init() the logic around getting the minimum user index is broken when there are no users registered. When no users are registered the computed user orphan index is always 0 and the if (unlikely(changelog_orphan.index < user_orphan.index)) branch is never entered.
0 is a poor sentinel for the minimum. It should use the maximum value representable in the type.